--- a/app/src/main/res/menu/menu_chat.xml
+++ b/app/src/main/res/menu/menu_chat.xml
@@ -13,6 +13,12 @@
         />
 
     <item
+        android:id="@+id/menu_friendProfile"
+        android:title="Profile"
+        app:showAsAction="never"
+        />
+
+    <item
         android:id="@+id/menu_deleteContact"
         android:title="Delete Contact"
         app:showAsAction="never" />
