--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,64 +14,57 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
             <EditText
                 android:id="@+id/et_FirstName_Rigister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dip"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
                 android:layout_marginTop="50dip"
                 android:hint="Firstname..."
                 android:inputType="textCapSentences"
                 android:maxLines="1" />
-
-
             <EditText
                 android:id="@+id/et_LastName_Rigister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dip"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
                 android:hint="Lastname..."
                 android:inputType="textCapSentences"
                 android:maxLines="1" />
-
             <EditText
                 android:id="@+id/et_Email_Rigister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dip"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
                 android:hint="Email..."
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />
-
             <EditText
                 android:id="@+id/et_Password_Rigister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dip"
-                android:layout_marginLeft="10dip"
-                android:layout_marginRight="10dip"
                 android:hint="Password..."
                 android:inputType="textPassword"
                 android:maxLines="1" />
-
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
                 android:onClick="btn_RegClick"
                 android:layout_gravity="center"
-                android:text="Signup" />
-
+                android:background="#64ab74"
+                android:drawableLeft="@drawable/emoji_1f465"
+                android:text="Sign Up"
+                android:textColor="#ffffff" />
         </LinearLayout>
 
     </ScrollView>
