--- a/app/src/main/res/layout/message_area.xml
+++ b/app/src/main/res/layout/message_area.xml
@@ -7,17 +7,15 @@
     android:layout_height="match_parent"
     android:focusableInTouchMode="true"
     android:gravity="bottom"
+    android:padding="6dp"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/emoji_btn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:padding="1dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:paddingBottom="2dp"
         android:src="@drawable/smiley" />
-
 
     <hani.momanii.supernova_emoji_library.Helper.EmojiconEditText
         android:id="@+id/et_Message"
@@ -36,14 +34,15 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/submit_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         emojicon:fabSize="mini"
         android:clickable="true"
-        android:tint="#ffffff"
         android:onClick="btn_SendMessageClick"
         android:src="@android:drawable/ic_menu_send"
         android:elevation="0dp"
+        android:background="#ffffff"
+        android:backgroundTintMode="src_atop"
         emojicon:pressedTranslationZ="0dp"
          />
 
