--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -12,6 +12,7 @@
             android:id="@+id/lv_FriendList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:longClickable="true"
             >
 
         </ListView>
