--- a/app/src/main/res/layout/custom_lastchat_row.xml
+++ b/app/src/main/res/layout/custom_lastchat_row.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
 
     <TextView
@@ -18,40 +17,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_lastChat_FriendFullName"
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Full Name"
-            android:textColor="#181717"
-            android:textSize="30px" />
+            android:src="@drawable/dp_placeholder_sm"
+            android:paddingRight="3dp"/>
 
-        <TextView
-            android:id="@+id/tv_lastChat_MessageDate"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sent Date"
-            android:textColor="#807474"
-            android:textSize="20px"
-            android:gravity="right"/>
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_lastChat_FriendFullName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Full Name"
+                    android:textColor="#181717"
+                    android:textSize="25px" />
+
+                <TextView
+                    android:id="@+id/tv_lastChat_MessageDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:text="Sent Date"
+                    android:textColor="#807474"
+                    android:textSize="20px" />
+
+            </LinearLayout>
+
+
+            <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
+                android:id="@+id/tv_lastChat_Message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Message..."
+                android:textColor="#807474"
+                android:textSize="20px"
+                app:emojiconSize="20px" />
+
+        </LinearLayout>
+
 
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
-            android:id="@+id/tv_lastChat_Message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Message..."
-            android:textColor="#565151"
-            app:emojiconSize="20px"
-            android:textSize="20px"  />
-
-    </LinearLayout>
-
 
 </LinearLayout>
