--- a/app/src/main/res/drawable/messagebg1.xml
+++ b/app/src/main/res/drawable/messagebg1.xml
@@ -2,13 +2,5 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#addcdf" />
-    <stroke
-        android:width="0dip"
-        android:color="#addcdf" />
-    <corners android:radius="10dip" />
-    <padding
-        android:bottom="0dip"
-        android:left="0dip"
-        android:right="0dip"
-        android:top="0dip" />
+    <corners android:radius="10dp" />
 </shape>
