--- a/app/src/main/res/layout/custom_friend_list_row.xml
+++ b/app/src/main/res/layout/custom_friend_list_row.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:padding="10dp"
 
     >
@@ -11,20 +11,31 @@
         android:id="@+id/tv_HiddenEmail"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="invisible"
-        />
+        android:visibility="invisible" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="3dp"
+            android:src="@drawable/dp_placeholder_sm" />
+
+        <TextView
+            android:id="@+id/tv_FriendFullName"
+            android:layout_width="wrap_content"
+            android:layout_height="41dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="TextView"
+            android:textColor="#181717"
+            android:textSize="30px" />
 
 
-    <TextView
-        android:id="@+id/tv_FriendFullName"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textSize="30px"
-        android:textColor="#181717"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical"
-        />
+    </LinearLayout>
 
 </LinearLayout>
